--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 _site/
+.sass-sache/
+.sass-cache/*
+node_modules
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.jekyll-metadata
