changed head title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: pitscher
-title: pitscher.com
+name: Pitscher
+title: PITSCHER
 url: http://matthias.pitscher.pw
 
 permalink: /:categories/:year/:month/:title
