change domain to github

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: pitscher
 title: PITSCHER
-url: http://matthias.pitscher.pw
+url: astreinerbaum.github.io
 
 permalink: /:categories/:title
 relative_permalinks: false
